updated css of notification to prevent wrong padding

--- a/assets/styles/entities.less
+++ b/assets/styles/entities.less
@@ -1632,8 +1632,10 @@
                 }
                 div{
                     display: block;
+                    width: 100%;
+                    padding: 0px 3vw;
                     font-size: 86%;
-                    text-align: center;
+
                 }
                 span{
                     line-height: normal;
